[gd_scene load_steps=5 format=3 uid="uid://cih610glg04gk"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_460yv"]
[ext_resource type="Texture2D" uid="uid://5dbddp2jcgbi" path="res://icon.svg" id="1_m5ltm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g5yfs"]
size = Vector2(130, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c748b"]
size = Vector2(128, 125.6)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_460yv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g5yfs")

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(1, 0.257813)
texture = ExtResource("1_m5ltm")

[node name="Humans_Beam" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Humans_Beam"]
position = Vector2(0, 166)
scale = Vector2(0.5, 2.5)
shape = SubResource("RectangleShape2D_c748b")

[node name="Icon" type="Sprite2D" parent="Humans_Beam"]
modulate = Color(0.243137, 1, 0.615686, 0.643137)
position = Vector2(0, 166)
scale = Vector2(0.5, 2.5)
texture = ExtResource("1_m5ltm")

[node name="Enemies_Beam" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemies_Beam"]
position = Vector2(0, 166)
scale = Vector2(0.5, 2.5)
shape = SubResource("RectangleShape2D_c748b")

[node name="Icon" type="Sprite2D" parent="Enemies_Beam"]
modulate = Color(1, 0, 0, 0.643137)
position = Vector2(0, 166)
scale = Vector2(0.5, 2.5)
texture = ExtResource("1_m5ltm")

[connection signal="body_entered" from="Humans_Beam" to="." method="_on_beam_body_entered"]
[connection signal="body_entered" from="Enemies_Beam" to="." method="_on_beam_body_entered"]
